Subject: Introduced Nest icon pack in VSCode settings
Body: This update incorporates the Nest icon pack into the Visual Studio Code settings. This change was motivated by the need to improve code readability and navigation, especially for complex files and projects. Users may notice a more intuitive and attractive icon set, enhancing their daily coding experience. Be aware that any icon customizations previously set could potentially be overridden by this new setting.

No related issue references to include for this commit.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
-{
+{ 
+    "material-icon-theme.activeIconPack": "nest",
     "workbench.colorCustomizations": {
       "editorRuler.foreground": "#ffffff",
       "activityBar.background": "#ce6e01",
